--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Git pull
         run: |
-          git pull origin main
+          git pull origin development
       - name: Down docker
         run: |
           docker compose down
