--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,15 +12,15 @@ jobs:
     steps:
       - name: Git pull
         run: |
-          cd /server/family-time-backend/
+          cd ./server/family-time-backend/
           git pull origin development
 
       - name: Down docker
         run: |
-          cd /server/family-time-backend/
+          cd ./server/family-time-backend/
           docker compose down
       - name: Up docker
         run: |
-          cd /server/family-time-backend/
+          cd ./server/family-time-backend/
           docker-compose up --build
     
