--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,17 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Git pull
-        run: |
-          cd ./server/family-time-backend/
-          git pull origin development
+      - name: Checkout code
+        uses: actions/checkout@v2  # Клонирует репозиторий
 
-      - name: Down docker
+      - name: Change directory to family-time-backend
         run: |
-          cd ./server/family-time-backend/
-          docker compose down
+          cd ./server/family-time-backend/  # Изменили путь на относительный
+          docker-compose down
+
       - name: Up docker
         run: |
-          cd ./server/family-time-backend/
+          cd ./server/family-time-backend/  # Изменили путь на относительный
           docker-compose up --build
     
