--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,5 +19,5 @@ jobs:
 
       - name: Up docker
         run: |
-          docker compose up --build -d
+          docker compose up --build
     
